--- a/src/posts/Blog1.mdx
+++ b/src/posts/Blog1.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'Why I Stopped Taking Notes and Don't Miss It'
-date: '2025-05-12'
-description: 'Kicking off (hopefully!) the first of many reflections with "Please DO NOT take notes." I used to be a diligent note-taker and checklist maker until I realized most of it wasn't actually adding value. Hope you enjoy reading it as much as I enjoyed writing it.'
+title: "Why I Stopped Taking Notes and Don't Miss It"
+date: "2025-05-12"
+description: "Kicking off (hopefully!) the first of many reflections with 'Please DO NOT take notes.' I used to be a diligent note-taker and checklist maker until I realized most of it wasn't actually adding value. Hope you enjoy reading it as much as I enjoyed writing it."
 ---
 
 ## Prelude
