--- a/src/posts/Blog1.mdx
+++ b/src/posts/Blog1.mdx
@@ -2,7 +2,16 @@
 title: "Why I Stopped Taking Notes and Don't Miss It"
 date: "2025-05-12"
 description: "Kicking off (hopefully!) the first of many reflections with 'Please DO NOT take notes.' I used to be a diligent note-taker and checklist maker until I realized most of it wasn't actually adding value. Hope you enjoy reading it as much as I enjoyed writing it."
+coverImage: "/images/no-notes-cover.jpg"
 ---
+
+<div className="relative w-full h-[400px] mb-8">
+  <img
+    src="/images/no-notes-cover.jpg"
+    alt="A minimalist workspace with a closed notebook, symbolizing the freedom from constant note-taking"
+    className="object-cover w-full h-full rounded-lg shadow-lg"
+  />
+</div>
 
 ## Prelude
 
