Update blog listing to card-based navigation

--- a/src/posts/Blog2.mdx
+++ b/src/posts/Blog2.mdx
@@ -2,7 +2,7 @@
 title: "Building Products with AI: Less Magic, More Method"
 date: "2025-04-15"
 description: "Reflecting on my journey building AI products, I've learned that success comes not from chasing the latest AI capabilities, but from a methodical focus on user problems and thoughtful integration of AI as a solution."
-coverImage: "/images/ai-product-cover.jpg"
+coverImage: "/images/no-notes-cover.jpg"
 ---
 
 ## The AI Gold Rush
