Fix cover image path for Blog2

--- a/src/posts/Blog2.mdx
+++ b/src/posts/Blog2.mdx
@@ -2,7 +2,7 @@
 title: "Where Are You on the GenAI Hype Cycle?"
 date: "2025-05-18"
 description: "An analysis of GenAI economics through the lens of pharmaceutical industry, exploring parallels in R&D costs, infrastructure, and product development."
-coverImage: "/images/genai-hype-cycle.jpg"
+coverImage: "/images/genai-hype-cycle.jpg.png"
 ---
 
 ## Prelude 
